<resources>
    <string name="app_name">Equip Conference</string>
    <string name="title_map">Map</string>
    <string name="title_details">Home</string>
    <string name="title_talks">Talks</string>
    <string name="title_question">Question</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Send Notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">Equip Conference 2019</string>
    <string name="question_name_hint">Enter your name here if you want to</string>
    <string name="question_hint">Enter your question</string>
    <string name="question_hint_speaker">Enter the speakers name</string>
    <string name="question_send">Send</string>
    <string name="title_questions">Questions</string>
    <string name="title_send_notification">Send Notification</string>
    <string name="hint_noti_name">Enter the notification message you want to send</string>
    <string name="hint_noti_time">Enter the time of the event</string>
    <string name="hint_noti_date">Enter the date of the event</string>
    <string name="title_more">More</string>
    <string name="fa_chevron_right">{fa-chevron-right}</string>
    <string name="row_recording_play">Play</string>
    <string name="row_recording_date">Date</string>
    <string name="row_recording_name">RecordingName</string>
    <string name="row_recording_speaker">Speaker</string>
    <string name="fa_play_circle">\uf144</string>
    <string name="fa_stop_circle">\uf28d</string>
    <string name="notification_content_title">Equip Conference</string>
    <string name="channel_name">Equip Conference</string>
    <string name="channel_description">Letting you know what is happening while you are at the conference!</string>
    <string name="check_internet">Internet connection lost. Try reconnecting</string>
    <string name="speaker1_info">Speaker1 Info</string>
    <string name="speaker2_info">Speaker2 Info</string>
    <string name="paul_dale_photo">Paul Dale photo</string>
    <string name="dave_clancey_photo">Dave Clancey photo</string>
    <string name="details_register_south">Equip South Island</string>
    <string name="details_register_north">Equip North Island</string>
    <string name="register">REGISTER</string>
    <string name="prev_recordings">Go Back</string>
    <string name="next_recordings">Go Forward</string>
    <string name="valid_speaker">Please enter a valid speaker name</string>
    <string name="nonempty_question">Please enter a question</string>
    <string name="title_timetable">Timetable</string>
</resources>
