<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_map"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_map"/>

    <item
            android:id="@+id/navigation_talks"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_talks"/>

    <item
            android:id="@+id/navigation_question"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_question"/>
    
    <item
            android:id="@+id/navigation_details"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_details"/>

    <item android:id="@+id/navigation_question_receiver"
                      android:icon="@drawable/ic_notifications_black_24dp"
                      android:title="@string/title_questions"/>



</menu>
