<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.NotificationFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <EditText
                android:id="@+id/notiDescription"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.5"
                android:ems="10"
                android:imeOptions="actionNext"
                android:hint="@string/hint_noti_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/notiDate"
                android:layout_width="345dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:layout_weight="0.5"
                android:ems="10"
                android:imeOptions="actionNext"
                android:hint="@string/hint_noti_date"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notiDescription" android:inputType="date"/>

        <EditText
                android:id="@+id/notiTime"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.5"
                android:ems="10"
                android:imeOptions="actionNext"
                android:hint="@string/hint_noti_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notiDate" android:inputType="time"/>

        <Button
                android:id="@+id/notiSend"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.5"
                android:text="@string/question_send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notiTime" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
