<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/row_talk"

          android:background="@drawable/border"
>

    <RelativeLayout
            android:id="@+id/rl_talk_contents"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:orientation="vertical"
                      android:layout_alignParentStart="true">

            <TextView
                    android:text="@string/row_recording_speaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/row_talk_speaker"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <LinearLayout android:layout_width="250dp" android:layout_height="wrap_content"
                          android:orientation="vertical" android:layout_marginEnd="16dp">
                <TextView
                        android:text="@string/row_recording_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/row_talk_recording"
                        app:layout_constraintTop_toBottomOf="@+id/row_talk_speaker"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/row_talk_play" android:layout_marginEnd="8dp"
                        android:layout_marginTop="4dp" app:layout_constraintHorizontal_bias="0.0"/>
            </LinearLayout>
            <TextView
                    android:text="@string/row_recording_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/row_talk_date"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/row_talk_recording"/>
        </LinearLayout>
        <LinearLayout android:layout_alignParentEnd="true" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
        >
            <ToggleButton
                    android:textOff=""
                    android:textOn=""
                    android:text=""
                    android:fontFamily="@font/fa_font"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:textSize="20sp"
                    android:checked="false"
                    android:layout_height="wrap_content" android:id="@+id/row_talk_play"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" android:background="@android:color/transparent"
            />
        </LinearLayout>


    </RelativeLayout>

</TableRow>
