<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools">

<ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.DetailsFragment"
            android:background="@color/black">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatImageView android:layout_width="match_parent"
                                                              android:layout_height="wrap_content"
                android:src="@drawable/logo_small"/>

            </LinearLayout>


            <LinearLayout android:id="@+id/ll_details_menu"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
            android:orientation="vertical" >

                <LinearLayout android:orientation="horizontal"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                android:id="@+id/ll_details_menu_map"
                              android:layout_gravity="center"
                              android:paddingBottom="15dp">
                    <ImageView android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:src="@drawable/ic_map_white_24dp"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/title_map"
                              android:textColor="@color/white"
                    android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout android:orientation="horizontal"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/ll_details_menu_question"
                              android:layout_gravity="center"
                              android:paddingBottom="15dp">
                    <ImageView android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:src="@drawable/ic_message_white_24dp"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/title_question"
                              android:textColor="@color/white"
                              android:textSize="20sp"/>

                </LinearLayout>
                <LinearLayout android:orientation="horizontal"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/ll_details_menu_talks"
                              android:layout_gravity="center"
                              android:paddingBottom="15dp">
                    <ImageView android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:src="@drawable/ic_audiotrack_white_24dp"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/title_talks"
                              android:textColor="@color/white"
                              android:textSize="20sp"/>

                </LinearLayout>
                <LinearLayout android:orientation="horizontal"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:id="@+id/ll_details_menu_timetable"
                              android:layout_gravity="center"
                              android:paddingBottom="15dp">
                    <ImageView android:layout_width="24dp"
                               android:layout_height="24dp"
                               android:src="@drawable/planner"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/title_timetable"
                              android:textColor="@color/white"
                              android:textSize="20sp"/>

                </LinearLayout>

            </LinearLayout>


       </LinearLayout>



</ScrollView>
</FrameLayout>